# dig-proto

./: .gitignore  Cargo.toml  LICENSE  README.md  analysis_options.yaml  build.rs  build.sh  pubspec.yaml
lib/: dig_proto.dart
lib/src/: comment.pb.dart  comment.pbenum.dart  comment.pbjson.dart  request.pb.dart  request.pbenum.dart  request.pbjson.dart  response.pb.dart  response.pbjson.dart  user.pb.dart  user.pbenum.dart  user.pbjson.dart
macros/: Cargo.toml
macros/src/: from_request.rs  lib.rs
proto/: comment.proto  request.proto  response.proto  user.proto
rust/: mod.rs  tests.rs
rust/ext/: README.md  mod.rs
rust/proto/: comment.rs  mod.rs  request.rs  response.rs  user.rs
