[package]
name = "dig-proto"
version = "0.1.0"
edition = "2024"
authors = ["Dig Project"]
description = "Protocol Buffer definitions for Dig Project"
license = "MIT"

[lib]
name = "dig_proto"
path = "rust/mod.rs"

[dependencies]
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.43"
rust-macros = { path = "./../rust-macros" }
http = "1.2"
http-body = "1.0"
http-body-util = "0.1"

[build-dependencies]
prost-build = "0.14.3"